fixed whitespace

--- a/portfolio/src/design/connect.scss
+++ b/portfolio/src/design/connect.scss
@@ -2,8 +2,8 @@
   background-color: grey;
   border-radius: 10px;
   font-family: 'Times New Roman', Times, serif;
+  height: 250px;
   width: 800px;
-  margin-bottom: 25px;
   h2 {
     font-size: 3em;
     padding-top: 15px;
@@ -12,7 +12,7 @@
   p {
     font-size: 1.3em;
     margin-left: 25px;
-    width: 550px;
+    width: 780px;
   }
   #connectLinks {
     display: flex;
