--- a/portfolio/src/design/footer.scss
+++ b/portfolio/src/design/footer.scss
@@ -1,9 +1,10 @@
 footer {
   background-color: grey;
-  height: 35px;
+  height: 100px;
   p {
     font-family: 'Courier New', Courier, monospace;
     font-size: 1.2em;
     margin-left: 20px;
+    margin-top: 50px;
   }
 }
