--- a/portfolio/src/design/header.scss
+++ b/portfolio/src/design/header.scss
@@ -1,8 +1,9 @@
 header {
+  align-items: center;
   background-color: grey;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  height: 40px;
   div {
     display: flex;
     justify-content: space-around;
